[gd_scene load_steps=39 format=3 uid="uid://bomrfiqo5sk4q"]

[ext_resource type="Script" path="res://scripts/control/controller.gd" id="1_1864d"]
[ext_resource type="Script" path="res://graph/scripts/graph_manager.gd" id="2_2m2fs"]
[ext_resource type="Script" path="res://topics/graph_traversal/bfs.gd" id="3_87483"]
[ext_resource type="PackedScene" uid="uid://7oq8rdksswhi" path="res://topics/ui/scenes/pseudocode_variables_stack_gui_vertical.tscn" id="4_g3jgw"]
[ext_resource type="Script" path="res://topics/graph_traversal/dfs.gd" id="5_2xtpe"]
[ext_resource type="Script" path="res://misc/easteregg/easteregg.gd" id="6_4l3tn"]
[ext_resource type="Texture2D" uid="uid://dxt0moanjslh0" path="res://misc/easteregg/sprites/T_Wheatley.png" id="7_aqtc4"]
[ext_resource type="Texture2D" uid="uid://tf4fod7pptw7" path="res://misc/easteregg/sprites/T_Fact_Core.png" id="8_gr0u5"]
[ext_resource type="Texture2D" uid="uid://ciybw5iwfesd1" path="res://misc/easteregg/sprites/T_Adventure_Core.png" id="9_vwir8"]
[ext_resource type="Texture2D" uid="uid://oypgn10d4281" path="res://misc/easteregg/sprites/T_PotatOS.png" id="10_cup43"]
[ext_resource type="Texture2D" uid="uid://dfvjwmtxfcom5" path="res://misc/easteregg/sprites/T_Companion_Cube.png" id="11_3vdvw"]
[ext_resource type="Texture2D" uid="uid://b0d0nb1r26gqr" path="res://misc/easteregg/sprites/scout_A_pose.png" id="12_7shv3"]
[ext_resource type="Texture2D" uid="uid://8i2im2f5eoki" path="res://misc/easteregg/sprites/wusel.png" id="13_gmj20"]
[ext_resource type="Texture2D" uid="uid://dphsn0nohagrn" path="res://misc/easteregg/sprites/T_Sentry_Turret.png" id="14_uyddy"]
[ext_resource type="AudioStream" uid="uid://dr77hd7wl1wtm" path="res://misc/easteregg/sounds/Wheatley_bw_sp_a2_core_history_response05.wav" id="15_kb0i3"]
[ext_resource type="AudioStream" uid="uid://bwbx6sxmm0dwi" path="res://misc/easteregg/sounds/Fact_core_fact10.wav" id="16_oc5h1"]
[ext_resource type="AudioStream" uid="uid://diqyb0slq61wl" path="res://misc/easteregg/sounds/Adventure_core_singing01.wav" id="17_d3oyj"]
[ext_resource type="AudioStream" uid="uid://bgvw83o81yus2" path="res://misc/easteregg/sounds/GLaDOS_potatos_longfall_speech03.mp3" id="18_qk200"]
[ext_resource type="AudioStream" uid="uid://cjdwf8tgecacs" path="res://misc/easteregg/sounds/GLaDOS_13_part1_middle-2.wav" id="19_48xe3"]
[ext_resource type="AudioStream" uid="uid://yibdqft8s6tc" path="res://misc/easteregg/sounds/Scout_needdispenser01.wav" id="20_8anxc"]
[ext_resource type="AudioStream" uid="uid://crewgsoal7w0h" path="res://misc/easteregg/sounds/discord-notification.mp3" id="21_5a5kn"]
[ext_resource type="AudioStream" uid="uid://b3yl0v3jwnqh2" path="res://misc/easteregg/sounds/Turret_turret_active_5.wav" id="22_v4bvs"]
[ext_resource type="AudioStream" uid="uid://yrrla05irsrc" path="res://misc/easteregg/sounds/Confetti - Sound Effect.wav" id="23_0vv55"]
[ext_resource type="FontFile" uid="uid://ce6y5gjob4a57" path="res://misc/fonts/ProggyVector-Regular.otf" id="24_sn1md"]
[ext_resource type="Script" path="res://topics/ui/scripts/linepainter.gd" id="25_lbqqa"]
[ext_resource type="Texture2D" uid="uid://cpxmrsqaqkxu1" path="res://misc/easteregg/sprites/T_Handheld_Portal_Device.png" id="26_wv8hi"]
[ext_resource type="Texture2D" uid="uid://dyhnwx0u1d4q2" path="res://misc/easteregg/sprites/T_No_Cake.png" id="27_vxkff"]
[ext_resource type="Texture2D" uid="uid://scgh683jvfi3" path="res://misc/easteregg/sprites/T_Cake.png" id="28_5friv"]
[ext_resource type="AudioStream" uid="uid://gqljk4rbeoym" path="res://misc/easteregg/sounds/sound_weapons_portalgun_portal_open2.wav" id="29_0n7ow"]
[ext_resource type="Script" path="res://scripts/control/mode_select.gd" id="30_d3yqm"]
[ext_resource type="Theme" uid="uid://ch47gokw4nkj3" path="res://misc/theme.tres" id="31_phvch"]
[ext_resource type="Script" path="res://menus/main/scripts/buttons/reset.gd" id="32_ojub5"]
[ext_resource type="Script" path="res://scripts/control/navigate_algorithm.gd" id="33_huo3b"]
[ext_resource type="PackedScene" uid="uid://djgl5ao260xr4" path="res://topics/ui/scenes/buttons_misc.tscn" id="34_ip20d"]
[ext_resource type="Script" path="res://menus/main/scripts/mouse_pos_manager.gd" id="35_gotrf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uforu"]
radius = 1.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pxwd8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cl4ta"]

[node name="controller" type="Node" node_paths=PackedStringArray("graph_manager", "algorithms", "state_counter", "info_ui", "display", "button_knoten", "button_kanten", "button_move", "button_bfs", "button_dfs")]
script = ExtResource("1_1864d")
graph_manager = NodePath("graph_manager")
algorithms = NodePath("CanvasLayer/algorithms")
state_counter = NodePath("CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer/state_counter")
info_ui = NodePath("CanvasLayer/info_gui")
display = NodePath("CanvasLayer/info_gui/VBoxContainer/display")
button_knoten = NodePath("CanvasLayer/upper_gui/buttons/buttons_graphmanager/HBoxContainer2/button_vertices")
button_kanten = NodePath("CanvasLayer/upper_gui/buttons/buttons_graphmanager/HBoxContainer2/button_edges")
button_move = NodePath("CanvasLayer/upper_gui/buttons/buttons_graphmanager/HBoxContainer2/button_move")
button_bfs = NodePath("CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer/button_bfs")
button_dfs = NodePath("CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer/button_dfs")

[node name="graph_manager" type="Node" parent="." node_paths=PackedStringArray("camera")]
process_mode = 1
script = ExtResource("2_2m2fs")
camera = NodePath("../Camera2D")

[node name="sweeper" type="ShapeCast2D" parent="graph_manager"]
enabled = false
shape = SubResource("CircleShape2D_uforu")
target_position = Vector2(0, 0)
collide_with_areas = true
collide_with_bodies = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="algorithms" type="Node" parent="CanvasLayer"]

[node name="bfs" type="Node" parent="CanvasLayer/algorithms"]
script = ExtResource("3_87483")

[node name="own_gui" parent="CanvasLayer/algorithms/bfs" instance=ExtResource("4_g3jgw")]

[node name="dfs" type="Node" parent="CanvasLayer/algorithms"]
script = ExtResource("5_2xtpe")

[node name="own_gui" parent="CanvasLayer/algorithms/dfs" instance=ExtResource("4_g3jgw")]

[node name="easteregg" type="Node" parent="CanvasLayer/algorithms" node_paths=PackedStringArray("graph_manager", "code_display")]
script = ExtResource("6_4l3tn")
sprites_array = Array[CompressedTexture2D]([ExtResource("7_aqtc4"), ExtResource("8_gr0u5"), ExtResource("9_vwir8"), ExtResource("10_cup43"), ExtResource("11_3vdvw"), ExtResource("12_7shv3"), ExtResource("13_gmj20"), ExtResource("14_uyddy")])
audio_wh = ExtResource("15_kb0i3")
audio_fc = ExtResource("16_oc5h1")
audio_ac = ExtResource("17_d3oyj")
audio_gp = ExtResource("18_qk200")
audio_cc = ExtResource("19_48xe3")
audio_sc = ExtResource("20_8anxc")
audio_ws = ExtResource("21_5a5kn")
audio_st = ExtResource("22_v4bvs")
audio_ct = ExtResource("23_0vv55")
graph_manager = NodePath("../../../graph_manager")
code_display = NodePath("own_gui/HBoxContainer/MarginContainer2/VBoxContainer/code_display")

[node name="own_gui" type="ColorRect" parent="CanvasLayer/algorithms/easteregg"]
visible = false
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -953.0
offset_top = 39.0
offset_bottom = -1.0
grow_horizontal = 0
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/algorithms/easteregg/own_gui"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/algorithms/easteregg/own_gui/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/algorithms/easteregg/own_gui/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/algorithms/easteregg/own_gui/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[rainbow freq=2.0 sat=0.8 val=0.8]PORTAL ALGORITHM[/rainbow]"
fit_content = true

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/algorithms/easteregg/own_gui/HBoxContainer/MarginContainer2/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2

[node name="code_display" type="RichTextLabel" parent="CanvasLayer/algorithms/easteregg/own_gui/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/bold_font = ExtResource("24_sn1md")
bbcode_enabled = true
text = "HEHE"
fit_content = true
script = ExtResource("25_lbqqa")

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/algorithms/easteregg/own_gui/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="label_return" type="Label" parent="CanvasLayer/algorithms/easteregg/own_gui/HBoxContainer/MarginContainer2/VBoxContainer"]
visible = false
modulate = Color(0, 0.305882, 0.623529, 1)
layout_mode = 2
text = "BY MISTAKE YOU USED SALT INSTEAD OF SUGAR SO TECHNICALY IT'S NOT EVEN A CAKE. DISGUSTING :(
Algorithm terminated and returned: Sadness"

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/algorithms/easteregg/own_gui/HBoxContainer/MarginContainer2/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="xd" type="RichTextLabel" parent="CanvasLayer/algorithms/easteregg/own_gui/HBoxContainer/MarginContainer2/VBoxContainer/ScrollContainer"]
modulate = Color(0.880209, 0.491947, 1, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "Recipe: 
- 1 (18.25-ounce) package chocolate cake mix
- 1 can prepared coconut–pecan frosting
- 3/4 cup vegetable oil
- 4 large eggs, 1 cup semi-sweet chocolate chips, 3/4 cup butter or margarine
- 1 2/3 cup granulated sugar (NOT SALT)
- 2 cups all-purpose flour, Fish-shaped crackers
- Fish-shaped candies
- Fish-shaped solid waste
- Fish-shaped dirt
- Fish-shaped ethylbenzene
- Pull-and-peel licorice
- Fish-shaped volatile organic compounds and sediment-shaped sediment
- Candy-coated peanut butter pieces (shaped like fish)
- 1 cup lemon juice
- Alpha resins
- Unsaturated polyester resin
- Fiberglass surface resins and volatile malted milk impoundments
- 9 large egg yolks
- 12 medium geosynthetic membranes
- 1 cup granulated sugar
- An entry called: <<How to Kill Someone with Your Bare Hands>>
- 2 cups rhubarb, sliced
- 2/3 cups granulated rhubarb
- 1 tbsp. all-purpose rhubarb
- 1 tsp. grated orange rhubarb
- 3 tbsp. rhubarb, on fire
- 1 large rhubarb
- 1 cross borehole electromagnetic imaging rhubarb
- 2 tbsp. rhubarb juice
- Adjustable aluminum head positioner
- Slaughter electric needle injector
-Cordless electric needle injector
- Injector needle driver
- Injector needle gun
- Cranial caps"
fit_content = true

[node name="portal_gun" type="Sprite2D" parent="CanvasLayer/algorithms/easteregg"]
visible = false
z_index = 1
position = Vector2(1564, 162)
rotation = -0.261799
texture = ExtResource("26_wv8hi")
flip_h = true

[node name="no_cake" type="Sprite2D" parent="CanvasLayer/algorithms/easteregg"]
visible = false
z_index = 1
position = Vector2(1452, 670)
scale = Vector2(3, 3)
texture = ExtResource("27_vxkff")

[node name="cake" type="Sprite2D" parent="CanvasLayer/algorithms/easteregg"]
visible = false
z_index = 1
position = Vector2(1452, 670)
scale = Vector2(3, 3)
texture = ExtResource("28_5friv")

[node name="dj2" type="AudioStreamPlayer2D" parent="CanvasLayer/algorithms/easteregg"]
visible = false
stream = ExtResource("29_0n7ow")

[node name="dj" type="AudioStreamPlayer2D" parent="CanvasLayer/algorithms/easteregg"]
visible = false

[node name="upper_gui" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="buttons" type="HBoxContainer" parent="CanvasLayer/upper_gui" node_paths=PackedStringArray("controller")]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 41.0
grow_horizontal = 2
alignment = 1
script = ExtResource("30_d3yqm")
controller = NodePath("../../..")

[node name="buttons_graphmanager" type="MarginContainer" parent="CanvasLayer/upper_gui/buttons"]
layout_mode = 2
size_flags_horizontal = 2
theme = ExtResource("31_phvch")

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/upper_gui/buttons/buttons_graphmanager"]
layout_mode = 2
size_flags_stretch_ratio = 1.5
alignment = 1

[node name="button_vertices" type="Button" parent="CanvasLayer/upper_gui/buttons/buttons_graphmanager/HBoxContainer2" groups=["buttons_active"]]
layout_mode = 2
tooltip_text = "VERTICES_TOOLTIP"
focus_mode = 1
theme = ExtResource("31_phvch")
text = "VERTICES"

[node name="button_edges" type="Button" parent="CanvasLayer/upper_gui/buttons/buttons_graphmanager/HBoxContainer2" groups=["buttons_active"]]
layout_mode = 2
tooltip_text = "EDGES_TOOLTIP"
focus_mode = 1
theme = ExtResource("31_phvch")
text = "EDGES"

[node name="button_move" type="Button" parent="CanvasLayer/upper_gui/buttons/buttons_graphmanager/HBoxContainer2" groups=["buttons_active"]]
layout_mode = 2
tooltip_text = "MOVE_TOOLTIP"
focus_mode = 1
theme = ExtResource("31_phvch")
text = "MOVE"

[node name="button_reset" type="Button" parent="CanvasLayer/upper_gui/buttons/buttons_graphmanager/HBoxContainer2" node_paths=PackedStringArray("controller", "camera") groups=["buttons_active"]]
layout_mode = 2
tooltip_text = "RESET_TOOLTIP"
focus_mode = 1
theme = ExtResource("31_phvch")
text = "RESET"
script = ExtResource("32_ojub5")
controller = NodePath("../../../../../..")
camera = NodePath("../../../../../../Camera2D")

[node name="buttons_algorithm" type="MarginContainer" parent="CanvasLayer/upper_gui/buttons"]
layout_mode = 2
theme = ExtResource("31_phvch")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/upper_gui/buttons/buttons_algorithm"]
layout_mode = 2
alignment = 1

[node name="button_bfs" type="Button" parent="CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer" groups=["buttons_active"]]
layout_mode = 2
tooltip_text = "BFS_TOOLTIP"
focus_mode = 1
theme = ExtResource("31_phvch")
text = "BFS"

[node name="button_dfs" type="Button" parent="CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer" groups=["buttons_active"]]
layout_mode = 2
tooltip_text = "DFS_TOOLTIP"
focus_mode = 1
theme = ExtResource("31_phvch")
text = "DFS"

[node name="VSeparator" type="VSeparator" parent="CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer"]
layout_mode = 2

[node name="button_stop" type="Button" parent="CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer" groups=["buttons_navigation"]]
layout_mode = 2
tooltip_text = "STOP_TOOLTIP"
focus_mode = 1
mouse_filter = 2
theme = ExtResource("31_phvch")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pxwd8")
disabled = true
text = "STOP"

[node name="button_backward_further2" type="Button" parent="CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer" node_paths=PackedStringArray("controller") groups=["buttons_navigation"]]
layout_mode = 2
tooltip_text = "BACKWARD_TOOLTIP_3"
focus_mode = 1
mouse_filter = 2
theme = ExtResource("31_phvch")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cl4ta")
disabled = true
text = "<<<-"
script = ExtResource("33_huo3b")
controller = NodePath("../../../../../..")
jump = -9999999

[node name="button_backward_further" type="Button" parent="CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer" node_paths=PackedStringArray("controller") groups=["buttons_navigation"]]
layout_mode = 2
tooltip_text = "BACKWARD_TOOLTIP_2"
focus_mode = 1
mouse_filter = 2
theme = ExtResource("31_phvch")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cl4ta")
disabled = true
text = "<<--"
script = ExtResource("33_huo3b")
controller = NodePath("../../../../../..")
jump = -5

[node name="button_backward" type="Button" parent="CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer" node_paths=PackedStringArray("controller") groups=["buttons_navigation"]]
layout_mode = 2
tooltip_text = "BACKWARD_TOOLTIP"
focus_mode = 1
mouse_filter = 2
theme = ExtResource("31_phvch")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cl4ta")
disabled = true
text = "<---"
script = ExtResource("33_huo3b")
controller = NodePath("../../../../../..")
jump = -1

[node name="state_counter" type="Label" parent="CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer"]
layout_mode = 2
theme = ExtResource("31_phvch")
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="button_forward" type="Button" parent="CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer" node_paths=PackedStringArray("controller") groups=["buttons_navigation"]]
layout_mode = 2
tooltip_text = "FORWARD_TOOLTIP"
focus_mode = 1
mouse_filter = 2
theme = ExtResource("31_phvch")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cl4ta")
disabled = true
text = "--->"
script = ExtResource("33_huo3b")
controller = NodePath("../../../../../..")
jump = 1

[node name="button_forward_further" type="Button" parent="CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer" node_paths=PackedStringArray("controller") groups=["buttons_navigation"]]
layout_mode = 2
tooltip_text = "FORWARD_TOOLTIP_2"
focus_mode = 1
mouse_filter = 2
theme = ExtResource("31_phvch")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cl4ta")
disabled = true
text = "-->>"
script = ExtResource("33_huo3b")
controller = NodePath("../../../../../..")
jump = 5

[node name="button_forward_further2" type="Button" parent="CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer" node_paths=PackedStringArray("controller") groups=["buttons_navigation"]]
layout_mode = 2
tooltip_text = "FORWARD_TOOLTIP_3"
focus_mode = 1
mouse_filter = 2
theme = ExtResource("31_phvch")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cl4ta")
disabled = true
text = "->>>"
script = ExtResource("33_huo3b")
controller = NodePath("../../../../../..")
jump = 9999999

[node name="buttons_misc" parent="CanvasLayer/upper_gui/buttons" instance=ExtResource("34_ip20d")]
layout_mode = 2

[node name="info_gui" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -563.0
offset_top = 39.0
offset_bottom = -1.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/info_gui"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="display" type="RichTextLabel" parent="CanvasLayer/info_gui/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/bold_font = ExtResource("24_sn1md")
bbcode_enabled = true
script = ExtResource("25_lbqqa")

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
script = ExtResource("35_gotrf")
zoom_level = 2.0

[connection signal="pressed" from="CanvasLayer/upper_gui/buttons/buttons_graphmanager/HBoxContainer2/button_vertices" to="CanvasLayer/upper_gui/buttons" method="_on_button_vertices_pressed"]
[connection signal="pressed" from="CanvasLayer/upper_gui/buttons/buttons_graphmanager/HBoxContainer2/button_edges" to="CanvasLayer/upper_gui/buttons" method="_on_button_edges_pressed"]
[connection signal="pressed" from="CanvasLayer/upper_gui/buttons/buttons_graphmanager/HBoxContainer2/button_move" to="CanvasLayer/upper_gui/buttons" method="_on_button_move_pressed"]
[connection signal="pressed" from="CanvasLayer/upper_gui/buttons/buttons_graphmanager/HBoxContainer2/button_reset" to="CanvasLayer/upper_gui/buttons/buttons_graphmanager/HBoxContainer2/button_reset" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer/button_bfs" to="CanvasLayer/upper_gui/buttons" method="_on_button_bfs_pressed"]
[connection signal="pressed" from="CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer/button_dfs" to="CanvasLayer/upper_gui/buttons" method="_on_button_dfs_pressed"]
[connection signal="pressed" from="CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer/button_stop" to="." method="stop_algorithm"]
[connection signal="pressed" from="CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer/button_backward_further2" to="CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer/button_backward_further2" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer/button_backward_further" to="CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer/button_backward_further" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer/button_backward" to="CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer/button_backward" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer/button_forward" to="CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer/button_forward" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer/button_forward_further" to="CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer/button_forward_further" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer/button_forward_further2" to="CanvasLayer/upper_gui/buttons/buttons_algorithm/HBoxContainer/button_forward_further2" method="_on_pressed"]
